* fix: Support for PCRetriableException in ReactorProcessor (#733)
* fix: NullPointerException on partitions revoked (#757)
* fix: remove lingeringOnCommitWouldBeBeneficial and unused imports (#732)
* fix: Fix failing auto-commit check for kafka-clients >= v3.7.0 (#721)
* fix: Fix redundant rebalance callback in LongPollingMockConsumer for Kafka >= 3.6 (#765)

=== Improvements

* improvement: add multiple caches for accelerating available container count calculation （#667）
* improvement: RecordContext now exposes lastFailureReason (#725)

=== Dependencies

* build(deps): Bump Kafka to 3.6.2
* build(deps): Bump Kafka to 3.7.0

== 0.5.2.8

=== Fixes

* fix: Fix equality and hash code for ShardKey with array key (#638), resolves (#579)
* fix: Fix target loading computation for inflight records (#662)
* fix: Fix synchronisation logic for transactional producer commit affecting non-transactional usage (#665), resolves (#637)
* fix: Fix for race condition in partition state clean/dirty tracking (#666), resolves (#664)

=== Improvements

* feature: Make PC message buffer size configurable - two new configuration options for controlling buffer size added (#682)

== 0.5.2.7

=== Fixes

* fix: Return cached pausedPartitionSet (#620), resolves (#618)
* fix: Parallel consumer stops processing data sometimes (#623), fixes (#606)
* fix: Add synchronization to ensure proper intializaiton and closing of PCMetrics singleton (#627), fixes (#617)
* fix: Readme - metrics example correction (#614)
* fix: Remove micrometer-atlas dependency (#628), fixes (#625)

=== Improvements

* Refactored metrics implementation to not use singleton - improves meter separation, allows correct metrics subsystem operation when multiple parallel consumer instances are running in same java process (#630), fixes (#617) improves on (#627)

== 0.5.2.6

=== Improvements

* feature: Micrometer metrics (#594)
* feature: Adds an option to pass an invalid offset metadata error policy (#537), improves (#326)