@@ -1,15 +1,32 @@
 package io.confluent.parallelconsumer;
 
 /*-
- * Copyright (C) 2020-2023 Confluent, Inc.
+ * Copyright (C) 2020-2024 Confluent, Inc.
  */
 
+import io.confluent.parallelconsumer.internal.PCModule;
+import io.confluent.parallelconsumer.internal.PCModuleTestEnv;
 import io.confluent.parallelconsumer.internal.TestParallelEoSStreamProcessor;
+import io.confluent.parallelconsumer.offsets.OffsetMapCodecManager;
+import io.confluent.parallelconsumer.state.ModelUtils;
+import io.confluent.parallelconsumer.state.PartitionState;
+import io.confluent.parallelconsumer.state.WorkContainer;
+import io.confluent.parallelconsumer.state.WorkManager;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.OffsetResetStrategy;
 import org.apache.kafka.clients.consumer.MockConsumer;
+import org.apache.kafka.common.TopicPartition;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import pl.tlinkowski.unij.api.UniLists;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
 /**
  * Tests to verify the protected and internal methods of
@@ -20,6 +37,27 @@ import org.junit.jupiter.api.Test;
  */
 @Slf4j
 class AbstractParallelEoSStreamProcessorConfigurationTest {
+    final MockConsumer<String, String> consumer = new MockConsumer<>(OffsetResetStrategy.LATEST);
+    final ParallelConsumerOptions<String, String> testOptions = ParallelConsumerOptions.<String, String>builder()
+            .consumer(consumer)
+            .build();
+
+    ModelUtils mu = new ModelUtils();
+    PartitionState<String, String> state;
+    WorkManager<String, String> wm;
+
+    String topic = "myTopic";
+    int partition = 0;
+
+    TopicPartition tp = new TopicPartition(topic, partition);
+    PCModule module = new PCModuleTestEnv();
+
+    @BeforeEach
+    public void setup() {
+        state = new PartitionState<>(0, mu.getModule(), tp, OffsetMapCodecManager.HighestOffsetAndIncompletes.of());
+        wm = mu.getModule().workManager();
+        wm.onPartitionsAssigned(UniLists.of(tp));
+    }
 
     /**
      * Test that the {@link io.confluent.parallelconsumer.internal.AbstractParallelEoSStreamProcessor#getQueueTargetLoaded}
@@ -41,6 +79,48 @@ class AbstractParallelEoSStreamProcessorConfigurationTest {
             final int actualTargetLoad = testInstance.getTargetLoad();
 
             Assertions.assertEquals(expectedTargetLoad, actualTargetLoad);
+        }
+    }
+
+    @Test
+    void testHandleStaleWorkSplit() {
+        List<WorkContainer<String, String>> workContainers = new ArrayList<>();
+
+        workContainers.add(new WorkContainer<String, String>(0, new ConsumerRecord<>(topic, partition, 0, "test_k", "test_v1"), module));
+        workContainers.add(new WorkContainer<String, String>(1, new ConsumerRecord<>(topic, partition, 1, "test_k", "test_v2"), module));
+
+        try (final TestParallelEoSStreamProcessor<String, String> testInstance = new TestParallelEoSStreamProcessor<>(testOptions)) {
+            testInstance.setWm(wm);
+            Function<PollContextInternal<String, String>, List<String>> dummyFunction = (contextInternal) -> new ArrayList<>();
+            Consumer<String> callback = (res) -> {
+            };
+
+            testInstance.runUserFunc(dummyFunction, callback, workContainers);
+
+
+            Assertions.assertEquals(testInstance.getMailBoxSuccessCnt(), 1);
+            Assertions.assertEquals(testInstance.getMailBoxFailedCnt(), 1);
+        }
+    }
+
+    @Test
+    void testHandleStaleWorkNoSplit() {
+        List<WorkContainer<String, String>> workContainers = new ArrayList<>();
+
+        workContainers.add(new WorkContainer<String, String>(0, new ConsumerRecord<>(topic, partition, 0, "test_k", "test_v1"), module));
+        workContainers.add(new WorkContainer<String, String>(0, new ConsumerRecord<>(topic, partition, 1, "test_k", "test_v2"), module));
+
+        try (final TestParallelEoSStreamProcessor<String, String> testInstance = new TestParallelEoSStreamProcessor<>(testOptions)) {
+            testInstance.setWm(wm);
+            Function<PollContextInternal<String, String>, List<String>> dummyFunction = (contextInternal) -> new ArrayList<>();
+            Consumer<String> callback = (res) -> {
+            };
+
+            testInstance.runUserFunc(dummyFunction, callback, workContainers);
+
+
+            Assertions.assertEquals(testInstance.getMailBoxSuccessCnt(), 2);
+            Assertions.assertEquals(testInstance.getMailBoxFailedCnt(), 0);
         }
     }
 }
