@@ -1,10 +1,20 @@
 package io.confluent.parallelconsumer.internal;
 
 /*-
- * Copyright (C) 2020-2023 Confluent, Inc.
+ * Copyright (C) 2020-2024 Confluent, Inc.
  */
 
 import io.confluent.parallelconsumer.ParallelConsumerOptions;
+import io.confluent.parallelconsumer.PollContextInternal;
+import io.confluent.parallelconsumer.state.WorkContainer;
+import io.confluent.parallelconsumer.state.WorkManager;
+import org.apache.kafka.clients.consumer.ConsumerRecord;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.BlockingQueue;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
 /**
  * Provides a set of methods for testing internal and configuration based interfaces of
@@ -16,4 +26,34 @@ public class TestParallelEoSStreamProcessor<K, V> extends AbstractParallelEoSStr
     }
 
     public int getTargetLoad() { return getQueueTargetLoaded(); }
+
+    public  <R> List<Tuple<ConsumerRecord<K, V>, R>> runUserFunc(
+            Function<PollContextInternal<K, V>, List<R>> dummyFunction,
+            Consumer<R> callback,
+            final List<WorkContainer<K, V>> activeWorkContainers) {
+
+        return super.runUserFunction(dummyFunction, callback , activeWorkContainers);
+    }
+
+    public void setWm(WorkManager wm) {
+        super.wm = wm;
+    }
+
+    public long getMailBoxSuccessCnt() {
+        return super.getWorkMailBox().stream()
+                .filter(kvControllerEventMessage -> {
+                    WorkContainer<K, V> wc = kvControllerEventMessage.getWorkContainer();
+                    return (wc != null && wc.isUserFunctionSucceeded());
+                })
+                .count();
+    }
+
+    public long getMailBoxFailedCnt() {
+        return super.getWorkMailBox().stream()
+                .filter(kvControllerEventMessage -> {
+                    WorkContainer<K, V> wc = kvControllerEventMessage.getWorkContainer();
+                    return (wc != null && !wc.isUserFunctionSucceeded());
+                })
+                .count();
+    }
 }
